2008-02-18  Dalibor Topic  <robilad@kaffe.org>

	JIT fixes for ARM.

	* kaffe/kaffevm/exception.c (vmExcept_setJNIFrame): Removed unnecessary assert.

	* kaffe/kaffevm/stackTrace.c (buildStackTrace): Check if a frame shows up twice
	on the stack and abort when it does.

2008-02-17  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (doubleDivide): Follow the spec more closely.

	* kaffe/kaffevm/soft.c, kaffe/kaffevm/soft.h (soft_fdivl): 
	Make the function available to the interpreter.

 	* kaffe/kaffevm/intrp/icode.h (div_double): Use soft_fdivl.

2008-02-16  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-02-16  Dalibor Topic  <robilad@kaffe.org>

	* config/config-hacks.h (HAVE_UNALIGNEDACCESS, MSG_PEEK)
	(HAVE_DYN_UNDERSTORE, DEFAULT_LIBRARYPATH): Removed unused definitions.

2008-02-16  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/constants.c (readConstantPool): Use 
	check_if_need_to_switch_words_in_jdouble instead of checking 
	if DOUBLE_ORDER_OPPOSITE is defined.
	(check_if_need_to_switch_words_in_jdouble): New static helper function.

	* config/config-hacks.h (DOUBLE_ORDER_OPPOSITE): Removed.

2008-02-16  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Added license information for files imported 
	from GNU Classpath and GCC.

2008-02-16  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_getZipData0)
	(java_util_zip_ZipFile_getZipEntries0): Only close entries we've 
	opened successfully.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_getZipEntry0)
	(java_util_zip_ZipFile_getZipData0)
	(java_util_zip_ZipFile_getZipEntries0),
	kaffe/kaffevm/findInJar.c (findClassInJar)
	(getManifestMainAttribute),
	* kaffe/kaffeh/support.c (kaffeh_findClass): Close opened zip entries
	after use.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2008-02-15  Dalibor Topic  <robilad@kaffe.org>
