@@ -1,3 +1,9 @@
+2008-02-20  Dalibor Topic  <robilad@kaffe.org>
+
+	* TODO: Updated.
+
+	* include/Makefile.am (MAYBE_ZLIB_ZIP_HDRS): Removed unused headers.
+
 2008-02-18  Dalibor Topic  <robilad@kaffe.org>
 
 	JIT fixes for ARM.
